Syntax Correction + Spacing Fixes
Syntax corrected, tabs fixed, code is easier to read and understand. Also removed <center> and replaced it with inline <h1 align="center"> for simplicity.

--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,12 @@ body {
 .box{
   width:40%;
   height:200px;
-  background-color:white; 
+  background-color:white;
   margin:25px 15px;
   border-radius:5px;
-   margin-left:auto;
+  margin-left:auto;
   margin-right:auto;
+	margin-top:10px
 }
 .box h3{
   font-family: 'Didact Gothic', sans-serif;
@@ -51,7 +52,8 @@ body {
 .shadow1,.shadow2,.shadow3,.shadow4,.shadow5,.shadow6,.shadow7,.shadow8{
     box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset;
 }
-/*****************************************************************dashed border
+/*****************************************************************
+*dashed border****************************************************
 ****************************************************************/
 .shadow1 h3, .shadow2 h3, .shadow3 h3, .shadow4 h3, .shadow5 h3, .shadow6 h3, .shadow7 h3, .shadow8 h3{
   width:87%;
@@ -61,7 +63,7 @@ body {
   border-radius:5px;
 }
 /****************************************************************
-*styling shadows
+*styling shadows*************************************************
 ****************************************************************/
 .shadow1:before, .shadow1:after{
   position:absolute;
@@ -138,7 +140,7 @@ body {
   top:100px;bottom:5px;left:30px;right:30px;
   z-index:-1;
   box-shadow:0 0 40px 13px #486685;
-  border-radius:100px/20px; 
+  border-radius:100px/20px;
 }
 .shadow7:before, .shadow7:after{
   position:absolute;
